sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:12: error: reassignment to val
          i=i-ecart
           ^